add cards adaptive + vendorbar

--- a/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
+++ b/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
@@ -76,6 +76,13 @@
   border: 1px solid #99ca74;
 }
 
+@media screen and (max-width: 1300px) {
+  .button-counter {
+    width: 180px;
+    height: 26px;
+  }
+}
+
 @media screen and (max-width: 525px) {
   .button-counter {
     width: 280px;
@@ -96,7 +103,6 @@
 
 @media screen and (max-width: 320px) {
   .button-counter {
-    width: 260px;
-    margin: 0 auto 10px;
+    width: 200px;
   }
 }
