--- a/frontend/src/components/ProductList.css
+++ b/frontend/src/components/ProductList.css
@@ -18,13 +18,14 @@
   .product-list {
     max-width: 800px;
     padding-left: 40px;
-    gap: 20px 30px;
+    gap: 20px 10px;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .product-list {
     max-width: 600px;
+    grid-template-columns: repeat(auto-fill, 190px);
     gap: 20px 40px;
     padding-left: 60px;
   }
@@ -44,5 +45,6 @@
     margin: 0 auto;
     max-width: 280px;
     grid-template-columns: repeat(1, 280px);
+    gap: 24px;
   }
 }
