--- a/frontend/src/components/VendorBar.css
+++ b/frontend/src/components/VendorBar.css
@@ -1,5 +1,5 @@
 .vendor-bar {
-  margin-top: 10px;
+  padding: 5px;
   border: 1px solid #99ca74;
   border-radius: 6px;
   background-color: #fff;
@@ -12,6 +12,7 @@
   font-weight: 400;
   padding: 8px;
   cursor: pointer;
+  margin: 2px;
 }
 
 .vendor-bar__red {
