--- a/frontend/src/components/VendorBar.css
+++ b/frontend/src/components/VendorBar.css
@@ -35,7 +35,6 @@
 @media screen and (max-width: 1024px) {
   .vendor-bar {
     width: 200px;
-    margin: 0 auto;
   }
 
   .vendor-bar__item {
@@ -46,7 +45,6 @@
 @media screen and (max-width: 768px) {
   .vendor-bar {
     width: 310px;
-    margin: 0 auto;
   }
 
   .vendor-bar__item {
@@ -59,10 +57,10 @@
 
 @media screen and (max-width: 525px) {
   .vendor-bar {
-    width: 280px;
-    margin-bottom: 40px;
+    width: 300px;
+    margin-bottom: 20px;
+    margin-left: calc(50% - 140px);
   }
-
   .vendor-bar__item {
     width: 280px;
     margin: 0 auto;
@@ -70,6 +68,10 @@
 }
 
 @media screen and (max-width: 320px) {
+  .vendor-bar {
+    width: 260px;
+    margin-left: calc(50% - 130px);
+  }
   .vendor-bar__item {
     width: 260px;
   }
