--- a/frontend/src/components/VendorBar.css
+++ b/frontend/src/components/VendorBar.css
@@ -58,8 +58,7 @@
 @media screen and (max-width: 525px) {
   .vendor-bar {
     width: 300px;
-    margin-bottom: 20px;
-    margin-left: calc(50% - 140px);
+    margin: 0 auto 20px;
   }
   .vendor-bar__item {
     width: 280px;
@@ -70,7 +69,6 @@
 @media screen and (max-width: 320px) {
   .vendor-bar {
     width: 260px;
-    margin-left: calc(50% - 130px);
   }
   .vendor-bar__item {
     width: 260px;
