--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -40,7 +40,6 @@
 .navbar__user-side {
   display: flex;
   align-items: center;
-  text-align: center;
 }
 
 .navbar__email {
@@ -76,11 +75,11 @@
 .navbar__admin-button {
   color: #fff;
   width: 100px;
-  height: 40px;
+  padding: 10px 5px;
   font-size: 12px;
-  padding: 0;
+  line-height: 12px;
   margin: 0 10px;
-  padding-top: 8px;
+  text-align: center;
   border: 1px solid #dc3545;
   border-radius: 4px;
 }
