--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -43,13 +43,13 @@
 }
 
 .product-page__buy-order {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  height: 34px;
+  width: 200px;
+  height: 30px;
+  
 }
-
 .product-page__price {
+  width: 200px;
+  text-align: center;
   margin: 0;
   border-radius: 6px;
   padding: 6px 6px;
@@ -58,6 +58,7 @@
   line-height: 20px;
   font-weight: 600;
   background-color: #f8f8f8;
+  margin-bottom: 4px;
 }
 
 .product-page__buy-button {
