--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -9,10 +9,13 @@
   position: fixed;
   bottom: 20px;
   left: 20px;
-  width: 20px;
-  height: 20px;
+  width: 28px;
+  height: 28px;
   opacity: .3;
-  transition: .3s;
+  background-image: url('../assets/github-icon.svg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .footer__link:hover {
