--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -45,8 +45,8 @@
 .product-page__buy-order {
   width: 200px;
   height: 30px;
-  
 }
+
 .product-page__price {
   width: 200px;
   text-align: center;
@@ -127,6 +127,12 @@
   }
 }
 
+@media screen and (max-width: 1300px) {
+  .product-page__price {
+    width: 180px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .product-page__container {
     width: 600px;
@@ -193,7 +199,12 @@
     height: 20px;
   }
   .product-page__buy-order {
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 280px;
+    height: 70px;
+    margin-top: 20px;
   }
   .product-page__buy-button {
     padding: 2px 6px;
