--- a/frontend/src/components/BasketItem/BasketItem.css
+++ b/frontend/src/components/BasketItem/BasketItem.css
@@ -29,10 +29,16 @@
 }
 
 .product__title {
+  text-decoration: none;
   margin: auto;
   width: 100px;
   font-size: 12px;
   z-index: 2;
+  color: #000;
+}
+
+.product__title:hover {
+  color: #9acd32;
 }
 
 .product__quantity-wrapper {
