fix spinner navbar padding

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -142,8 +142,7 @@
 
 @media screen and (max-width: 768px) {
   .navbar-container {
-    padding: 0 20px;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 3;
   }
@@ -151,13 +150,14 @@
     visibility: hidden;
     width: 40px;
     height: 40px;
+    transition: 1s;
   }
   .navbar__logo-link:before {
     content: url('../../assets/watermelon.svg');
     visibility: visible;
   }
   .navbar__logo-link:hover {
-    transform: rotate(-15deg);
+    transform: rotate(360deg);
   }
   .navbar__favourites-button {
     font-size: 15px;
