--- a/frontend/src/components/Spinner/Spinner.css
+++ b/frontend/src/components/Spinner/Spinner.css
@@ -5,6 +5,8 @@
   width: 50px;
   height: 50px;
   background-image: url('../../assets/watermelon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
   animation: spinner .6s linear infinite;
 }
 
