--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -1,8 +1,11 @@
 .auth {
   width: 600px;
-  display: flex;
-  align-items: center;
-  padding-top: 100px;
+  margin: 0 auto;
+  background-color: #fff;
+  box-shadow: 0 10px 28px  #cacaca;
+  
+  margin-top: 100px;
+  text-align: center;
 }
 
 .auth__card {
@@ -10,14 +13,32 @@
 }
 
 .auth__title {
-  margin: auto;
+ font-size: 32px;
+ line-height: 32px;
+ font-weight: 600;
+}
+
+@media screen and (max-width: 1024px) {
+  .auth {
+    margin-top: 80px;
+    width: 520px;
+    padding: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .auth {
+    margin-top: 120px;
+    width: 520px;
+  }
+  .auth__card {
+    padding: 40px;
+  }
 }
 
 @media screen and (max-width: 500px) {
   .auth {
     width: 320px;
-  }
-  .auth__card {
     padding: 20px;
   }
 }
