--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -1,50 +1,244 @@
 .auth {
-  width: 600px;
+  width: 400px;
+  height: 380px;
   margin: 0 auto;
   background-color: #fff;
   box-shadow: 0 10px 28px  #cacaca;
-  
   margin-top: 100px;
   text-align: center;
+  border-radius: 6px;
 }
 
 .auth__card {
-  padding: 80px;
+  padding-top: 50px;
+  margin: 50px auto 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .auth__title {
- font-size: 32px;
- line-height: 32px;
- font-weight: 600;
-}
-
-@media screen and (max-width: 1024px) {
-  .auth {
-    margin-top: 80px;
-    width: 520px;
-    padding: 40px;
-  }
+  color: #212529;
+  font-size: 28px;
+  line-height: 28px;
+  font-weight: 400;
+  margin: 0 auto 10px;
 }
 
 @media screen and (max-width: 768px) {
   .auth {
     margin-top: 120px;
-    width: 520px;
-  }
-  .auth__card {
-    padding: 40px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .auth {
-    width: 320px;
-    padding: 20px;
+    width: 300px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .auth {
     width: 316px;
+  }
+}
+
+/***** Form styles for Register.js + Login.js *****/
+
+.auth__form {
+  position: relative;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.auth__input {
+  display: block;
+  width: 300px;
+  margin-top: 20px;
+  height: calc(2rem + 2px);
+  padding: 10px;
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  border-bottom: 1px solid #212529;
+}
+
+.auth__input::placeholder {
+  color: #ddd;
+}
+
+.auth__input:focus {
+  opacity: .5;
+  color: #212529;
+  outline: 0;
+  -webkit-box-shadow: 0px 10px 4px -10px #000000; 
+  box-shadow: 0px 10px 4px -10px #000000;
+}
+
+.auth__submit-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.auth__password-check {
+  margin: 0 0 0 20px;
+  color: #ff8484;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 500;
+}
+
+.auth__button {
+  font-size: 15px;
+  line-height: 15px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin: 0;
+  width: 100px;
+  height: 40px;
+  background-color: #9acd32;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  box-sizing: border-box;
+  border: none;
+  opacity: 1;
+}
+
+.auth__button:hover {
+  opacity: .8;
+}
+
+.auth__button:disabled {
+  opacity: .5;
+  color: #fff;
+  background-color: #818181;
+}
+
+.auth__button:hover:disabled {
+  cursor: default;
+  color: #fff;
+}
+
+.auth__button_login {
+  margin-top: 90px;
+}
+
+.auth__interaction {
+  margin-top: 14px;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebebeb;
+  border-radius: 0 0 6px 6px;
+}
+
+.auth__account-text {
+  padding-top: 1px;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.auth__link {
+  font-size: 15px;
+  line-height: 15px;
+  font-weight: 600;
+  margin: 0 0 0 10px;
+  color: #9acd32;
+  opacity: 1;
+}
+
+.auth__link:hover {
+  color: #9acd32;
+  opacity: .8;
+}
+
+@media screen and (max-width: 768px) {
+  .auth__form {
+    align-items: center;
+  }
+  .auth__input {
+    width: 240px;
+    height: 1.8rem;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 400;
+  }
+  .auth__button {
+    font-size: 12px;
+    line-height: 12px;
+    width: 80px;
+    height: 32px;
+  }
+  .auth__submit-container {
+    width: 240px;
+    margin-top: 24px;
+  }
+  .auth__password-check {
+    margin: 0;
+    color: #ff8484;
+    font-size: 12px;
+    line-height: 12px;
+    font-weight: 600;
+  }
+  .auth__account-text {
+    font-size: 12px;
+    line-height: 12px;
+  }
+  .auth__link {
+    font-size: 13px;
+    line-height: 13px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .auth {
+    width: 286px;
+    height: 330px;
+  }
+  .auth__input {
+    width: 250px;
+    height: 1.4rem;
+  }
+  .auth__submit-container {
+    width: 220px;
+    margin-top: 0;
+  }
+  .auth__password-check {
+    font-size: 12px;
+    line-height: 12px;
+    font-weight: 400;
+  }
+  .auth__account-text {
+    font-size: 12px;
+    line-height: 12px;
+  }
+  .auth__link {
+    font-size: 13px;
+    line-height: 13px;
+  }
+  .auth-checkbox__tooltip {
+    display: none;
+  }
+  .auth-checkbox__help {
+    display: none;
+  }
+  .auth__interaction {
+    flex-direction: row;
   }
 }
