--- a/frontend/src/components/Spinner/Spinner.css
+++ b/frontend/src/components/Spinner/Spinner.css
@@ -14,6 +14,9 @@
   position: absolute;
   top: 50%;
   left: calc(50% - 50px);
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 600;
 }
 
 @keyframes spinner {
