--- a/frontend/src/pages/Favourites.css
+++ b/frontend/src/pages/Favourites.css
@@ -1,19 +1,7 @@
 .favourites {
   margin-top: 50px;
   display: flex;
-  margin-left: 60px;
-}
-
-.favourites__wrapper {
-  display: flex;
-  width: 100%;
-  margin-right: 100px;
-}
-
-@media screen and (max-width: 1024px) {
-  .shop {
-
-  }
+  justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
