--- a/frontend/src/pages/Shop.css
+++ b/frontend/src/pages/Shop.css
@@ -1,13 +1,7 @@
 .shop {
   margin-top: 50px;
   display: flex;
-  margin-left: 60px;
-}
-
-@media screen and (max-width: 1024px) {
-  .shop {
-
-  }
+  justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
