--- a/frontend/src/pages/Shop.css
+++ b/frontend/src/pages/Shop.css
@@ -20,19 +20,44 @@
 }
 
 .shop__search {
-  width: calc(80%);
-  height: 40px;
-  margin: 0 auto 40px;
+  width: 140px;
+  height: 34px;
   display: flex;
   justify-content: center;
   border: none;
-  box-shadow: 0px 0px 12px 3px #b8b8b880;
-  border-radius: 6px;
-  padding-left: 20px;
-  color: #2c2c2ca6;
+  padding-left: 12px;
+  transition: .5s;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #9acd32;
+  background-color: #fff;
+}
+
+.shop__search::placeholder {
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 400;
+  color: #9acd32;
 }
 
 .shop__search:focus {
+  width: 240px;
   outline: none;
-  box-shadow: 0px 0px 14px 1px #99ca74;
+  color: #9acd32;
+  box-shadow: none;
+}
+
+.search__form {
+  display: flex;
+}
+
+.search__button {
+  width: 34px;
+  height: 34px;
+  padding: 10px;
+  background-image: url('../assets/search.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  background-color: #fff;
 }
