--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .navbar-container {
   width: 100%;
   height: 60px;
-  background-color: #212529;
+  background-color: #9dc77e;
   display: flex;
   justify-content: space-between;
   padding: 10px 140px;
@@ -13,11 +13,11 @@
   line-height: 18px;
   font-weight: 600;
   text-decoration: none;
-  color: #b3b3b3;
+  color: #fff;
 }
 
 .navbar__logo-link:hover {
-  color: #b3b3b3;
+  color: #fff;
   opacity: .5;
 }
 
@@ -45,7 +45,7 @@
 }
 
 .navbar__email {
-  color: #b3b3b3;
+  color: #fff;
   font-size: 16px;
   line-height: 16px;
   font-weight: 400;
@@ -82,14 +82,14 @@
   line-height: 12px;
   margin: 0 10px;
   text-align: center;
-  border: 1px solid #dc3545;
+  border: 1px solid #fff;
   border-radius: 4px;
 }
 
 .navbar__admin-button:hover {
   cursor: pointer;
   background-color: #fff;
-  color: #dc3545;
+  color: #559d20;
 }
 
 .navbar__login-button {
