--- a/frontend/src/components/SearchForm/SearchForm.css
+++ b/frontend/src/components/SearchForm/SearchForm.css
@@ -1,4 +1,7 @@
 .search-form {
+  position: absolute;
+  top: 14px;
+  left: calc(50% - 99px);
   display: flex;
   box-shadow: 0px 0px 10px 2px #c4c4c4;
 }
@@ -52,7 +55,42 @@
   background-color: #fff;
 }
 
+@media screen and (max-width: 1300px) {
+  .search-form {
+    left: calc(50% - 160px);
+  }
+}
+
 @media screen and (max-width: 1024px) {
+  .search-form {
+    position: static;
+    padding: 5px 0 5px 20px;
+  }
+  .search-form__input {
+    width: calc(100% - 80px);
+    height: 34px;
+    display: flex;
+    justify-content: center;
+    border: none;
+    padding-left: 8px;
+    transition: .5s;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #9acd32;
+    background-color: #fff;
+  }
+  .search-form__input:focus {
+    width: calc(100% - 80px);
+  }
+  .search-form__cancel {
+    border-radius: 6px 0 0 6px;
+  }
+  .search-form__button {
+    border-radius: 0 6px 6px 0;
+  }
+}
+
+/* @media screen and (max-width: 1024px) {
   .search-form__input {
     width: 80px;
     height: 28px;
@@ -84,4 +122,4 @@
     display: none;
 
   }
-}
+} */
