--- a/frontend/src/components/modals/CreateOrder.css
+++ b/frontend/src/components/modals/CreateOrder.css
@@ -35,6 +35,6 @@
   font-size: 16px;
   line-height: 16px;
   font-weight: 400;
-  background-color: #dfdfdf;
+  background-color: #bbb;
   box-shadow: none;
 }
