--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -55,7 +55,7 @@
 
 .navbar__login {
   cursor: pointer;
-  color: #9acd32;
+  color: #000;
   font-size: 15px;
   line-height: 15px;
   font-weight: 500;
@@ -64,6 +64,7 @@
   padding: 4px;
   display: flex;
   align-items: center;
+  background-color: #fff;
 }
 
 .navbar__login:hover {
