--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -2,7 +2,7 @@
 
 .main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url('../assets/watermelon-bg.jpg');
   background-repeat: repeat;
   background-color: #fff;
