--- a/frontend/src/components/SearchForm/SearchForm.css
+++ b/frontend/src/components/SearchForm/SearchForm.css
@@ -4,6 +4,13 @@
   left: calc(50% - 99px);
   display: flex;
   box-shadow: 0px 0px 10px 2px #c4c4c4;
+  opacity: .6;
+  filter: grayscale(100%);
+}
+
+.search-form_focus {
+  opacity: 1;
+  filter: none;
 }
 
 .search-form__cancel {
