minor fix NavBar

--- a/frontend/src/pages/Shop.css
+++ b/frontend/src/pages/Shop.css
@@ -15,7 +15,8 @@
 @media screen and (max-width: 525px) {
   .shop {
     display: block;
-    margin: 40px auto;
+    margin: 20px auto 10px;
+    padding-top: 20px;
   }
 }
 
