--- a/frontend/src/components/SearchForm/SearchForm.css
+++ b/frontend/src/components/SearchForm/SearchForm.css
@@ -46,7 +46,6 @@
 }
 
 .search-form__input:focus {
-  width: 240px;
   outline: none;
   color: #9acd32;
   box-shadow: none;
@@ -62,6 +61,10 @@
   border: none;
   background-color: #fff;
   border-radius: 0 6px 6px 0;
+}
+
+.search-form__input:focus ~ .search-form__button {
+  background-color: #f5f5f5;
 }
 
 @media screen and (max-width: 1300px) {
