fix background style

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 60px;
-  background-color: #9dc77e;
+  background-color: #99ca74;
   display: flex;
   justify-content: space-between;
   padding: 10px 140px;
